# retrofit-cost-ml

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
models/: elastic_net_model.pkl  glm_gamma_model.pkl  gradient_boosting_model.pkl  ridge_model.pkl
notebooks/: retrofit-cost-tool-main.ipynb  retrofit-cost-tool-main.py  retrofit-cost-tool-predict.ipynb  retrofit-cost-tool-predict.py  retrofit-cost-tool.ipynb  retrofit-cost-tool.py  retrofit-model-training.ipynb  retrofit-model-training.py  synthetic_data.csv
scripts/: main.py  predict.py
src/: __init__.py  main.py  model_selection.py  model_utils.py
src/retrofit_cost_tool/: __init__.py  data_utils.py  main.py  model_selection.py  model_utils.py  plot_utils.py  predict.py
src/retrofit_cost_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/retrofit_cost_tool/data/: srce_all.csv  srce_train.csv
src/retrofit_cost_tool/models/: ols_model.pkl
tests/: conftest.py  test_data_utils.py  test_integration.py  test_models.py  test_predict.py
tests/data/: test_sample.csv
