[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrofit-cost-tool"
version = "1.0"
description = "A package for predicting seismic retrofit costs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Juan F. Fung", email = "juan.fung@nist.gov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "joblib==1.5.1",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
]

[project.urls]
Repository = "https://sgitlab.nist.gov/jff/retrofit-cost-tool.git"

[tool.setuptools.packages.find]
where = ["src"]

# Keep data and models external for now
[tool.setuptools.package-data]
retrofit_cost_tool = [
    "data/*.csv",
    "models/*.pkl"
]
